# Space-Shooter

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindSDL2_ttf.cmake
include/: Bullet.h  Entity.h  Game.h  ParticleSystem.h  Particles.h  Player.h  Projectile.h  RenderWindow.h  Ship.h  Utils.h  Vector.h
src/: Bullet.cpp  Entity.cpp  Game.cpp  Main.cpp  ParticleSystem.cpp  Player.cpp  Projectile.cpp  RenderWindow.cpp  Ship.cpp  Vector.cpp
